# xdotter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REWRITE_PLAN.md  REWRITE_STATUS.md  SPEC.md  TEST_ANALYSIS.md  build.rs  bwrap-test.sh  docker-test.sh  install.sh  readme.md  run_xd  test_xd.py  xd.py  xd.pyz  xdotter.toml  核心设计理念.md
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yml  release.yml  rust.yml
.qwen/: settings.json
_vendor/: README.md  __init__.py
_vendor/argcomplete/argcomplete-3.6.3.dist-info/: RECORD
docs/: config-validation-design.md  redundancy-analysis.md  shell-completion-design.md
scripts/: build-pyz.sh  check-release-ready.sh  ci-check.sh  get-mode.rs  run-tests-isolated.sh  test-rust.sh  vendor-tomli.sh
src/: apply.rs  args.rs  cli.rs  config.rs  discover.rs  error.rs  file.rs  global.rs  lib.rs  log.rs  main.rs  mlog.rs  path.rs  permissions.rs  plan.rs  run_mode.rs  symlink.rs
src/actions/: complete.rs  deploy.rs  mod.rs  new.rs  undeploy.rs
src/commands/: completion.rs  deploy.rs  mod.rs  new.rs  status.rs  undeploy.rs  version.rs
tasks/: plan.md
tests/: integration.rs
tests/spec/: conftest.py  pyproject.toml  test_cli_args.py  test_commands.py  test_config_format.py  test_critical_high_gaps.py  test_dependencies.py  test_error_classes.py  test_execution_modes.py  test_exit_codes.py  test_lifecycle.py  test_output.py  test_path_semantics.py  test_permissions.py  test_race_safety.py  test_smoke.py  test_symlink_safety.py  test_trust_model.py
