[package]
name = "xdotter"
version = "0.4.0"
edition = "2021"
description = "A simple dotfile manager - single binary, no dependencies"
license = "MIT"

[[bin]]
name = "xd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
