[package]
name = "xdotter"
version = "0.1.0"
edition = "2021"
description = "A simple dotfile manager - single binary, no dependencies"
license = "MIT"
repository = "https://github.com/cncsmonster/xdotter"
readme = "README.md"

[[bin]]
name = "xd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
basic-toml = "0.1"
serde = { version = "1", features = ["derive"] }
dirs = "5"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
